# rust-web-server

./: README.md  docker-compose.yml  grafana-datasources.yaml  prometheus.yml  tempo.yaml
.github/workflows/: rust_build.yml
ferrum-flow/src/: main.rs
ferrumflow/: Cargo.toml
ferrumflow/src/: lib.rs  main.rs
grafana/dashboards/: rust-web-server-dashboard.json
grafana/provisioning/datasources/: datasources.yaml
hello/src/: main.rs
rust-web-server/: Cargo.toml
rust-web-server/src/: lib.rs  main.rs
