[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21" }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11" }
hyper = { version = "0.14", features = ["full"] }